[gd_scene load_steps=3 format=2]

[ext_resource path="res://window_ninepatch.png" type="Texture" id=1]
[ext_resource path="res://WindowManager.gd" type="Script" id=2]

[node name="Window" type="MarginContainer"]
margin_left = 128.0
margin_top = 40.0
margin_right = 1160.0
margin_bottom = 616.0
rect_min_size = Vector2( 560, 320 )
mouse_filter = 1
script = ExtResource( 2 )

[node name="NinePatch" type="NinePatchRect" parent="."]
margin_right = 1032.0
margin_bottom = 576.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 1 )
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="ControlWindow" type="MarginContainer" parent="."]
margin_right = 1032.0
margin_bottom = 576.0
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="ControlWindow"]
margin_right = 1032.0
margin_bottom = 576.0
mouse_filter = 2

[node name="TopControl" type="Control" parent="ControlWindow/VBox"]
margin_right = 1032.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="Control" type="Control" parent="ControlWindow/VBox"]
margin_top = 36.0
margin_right = 1032.0
margin_bottom = 556.0
mouse_filter = 2
size_flags_vertical = 3

[node name="BottomControl" type="Control" parent="ControlWindow/VBox"]
margin_top = 560.0
margin_right = 1032.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 16 )

[node name="HBox" type="HBoxContainer" parent="ControlWindow"]
margin_right = 1032.0
margin_bottom = 576.0
mouse_filter = 2

[node name="LeftControl" type="Control" parent="ControlWindow/HBox"]
margin_right = 16.0
margin_bottom = 576.0
rect_min_size = Vector2( 16, 0 )

[node name="Control" type="Control" parent="ControlWindow/HBox"]
margin_left = 20.0
margin_right = 1012.0
margin_bottom = 576.0
mouse_filter = 2
size_flags_horizontal = 3

[node name="RightControl" type="Control" parent="ControlWindow/HBox"]
margin_left = 1016.0
margin_right = 1032.0
margin_bottom = 576.0
rect_min_size = Vector2( 16, 0 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_right = 1032.0
margin_bottom = 576.0
mouse_filter = 2

[node name="Control" type="Control" parent="Buttons"]
margin_right = 1032.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
mouse_filter = 2

[node name="HBox" type="HBoxContainer" parent="Buttons"]
margin_top = 6.0
margin_right = 1032.0
margin_bottom = 26.0
mouse_filter = 2
alignment = 2

[node name="Minimize" type="Button" parent="Buttons/HBox"]
margin_left = 964.0
margin_right = 984.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "_"

[node name="Close" type="Button" parent="Buttons/HBox"]
margin_left = 988.0
margin_right = 1008.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "X"

[node name="Control" type="Control" parent="Buttons/HBox"]
margin_left = 1012.0
margin_right = 1032.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
mouse_filter = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[connection signal="gui_input" from="." to="." method="_on_Window_gui_input"]
[connection signal="gui_input" from="ControlWindow/VBox/TopControl" to="." method="_on_TopControl_gui_input"]
[connection signal="gui_input" from="ControlWindow/VBox/BottomControl" to="." method="_on_BottomControl_gui_input"]
[connection signal="gui_input" from="ControlWindow/HBox/LeftControl" to="." method="_on_LeftControl_gui_input"]
[connection signal="gui_input" from="ControlWindow/HBox/RightControl" to="." method="_on_RightControl_gui_input"]
[connection signal="pressed" from="Buttons/HBox/Minimize" to="." method="_on_Minimize_pressed"]
[connection signal="pressed" from="Buttons/HBox/Close" to="." method="_on_Close_pressed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
